--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         <input type="email" placeholder="이메일" required>
       </div>
       <div class="form-group">
-        <textarea rows="5" placeholder="내용을 입력해주세요!" required></textarea>
+        <textarea rows="5" placeholder="내용" required></textarea>
       </div>
       <button type="submit">문의하기</button>
     </form>
