--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>밀리의 서재</title>
 	<link rel="stylesheet" href="css/style.css">
+  <link rel="shortcut icon" href="image/favicon.png" type="image/x-icon">
+  <link rel="icon" href="image/favicon.png" type="image/x-icon">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/ScrollTrigger.min.js"></script>
 </head>
